# canon

./: .gitignore  Cargo.toml  README.md  canon.yaml  docker-compose.yml  package.json
crates/canon-cli/: Cargo.toml
crates/canon-cli/src/: artifact_ingest.rs  context.rs  dashboard.rs  demo.rs  dispatch.rs  divergence.rs  fmt.rs  gate.rs  ingest.rs  init.rs  inventory.rs  inventory_selftest.rs  learn.rs  lib.rs  main.rs  plans.rs  plugin_sync.rs  query.rs  report.rs  retrieve.rs  review.rs  scaffold.rs  selftest.rs  skills.rs  subject.rs  tier.rs  tiers.rs
crates/canon-cli/tests/: artifact_ingest.rs  context.rs  dashboard.rs  dispatch.rs  fmt_check.rs  gate.rs  ingest.rs  init.rs  learn_promote.rs  plans_ingest.rs  plugin_sync.rs  pre_dispatch_hook.rs  query.rs  query_plugin.rs  query_tier_degradation.rs  report.rs  report_tier_boundary.rs  retrieve.rs  scaffold.rs  selftest_fixture.rs  skills_install.rs  subject.rs  tier_age.rs
crates/canon-cli/tests/support/: mod.rs
crates/canon-fmt/: Cargo.toml
crates/canon-fmt/src/: check.rs  gherkin.rs  lib.rs  refparse.rs  report.rs  resolve.rs  schema_registry.rs  sha.rs  util.rs
crates/canon-fmt/tests/: fixtures_check.rs  schema_and_surface_checks.rs  wip_feature_stub.rs
crates/canon-gate/: Cargo.toml
crates/canon-gate/fixtures/fabricated-evidence/: expected_failures.txt
crates/canon-gate/fixtures/flagged/: expected_failures.txt
crates/canon-gate/fixtures/malformed-evidence/: expected_failures.txt
crates/canon-gate/fixtures/stale-evidence/: expected_failures.txt
crates/canon-gate/fixtures/trust-below-required/: expected_failures.txt
crates/canon-gate/fixtures/uncovered-cell/: expected_failures.txt
crates/canon-gate/fixtures/unevidenced-flip/: expected_failures.txt
crates/canon-gate/fixtures/unreviewed-promotion/: expected_failures.txt
crates/canon-gate/scripts/: canon-gate-pre-commit.sh
crates/canon-gate/src/: checkbox.rs  context.rs  coverage.rs  dispatch.rs  failure_class.rs  hooks.rs  ledger.rs  lib.rs  markers.rs  policy.rs  promote.rs  report.rs  selftest.rs  staleness.rs  trust.rs  trust_ladder.rs
crates/canon-ingest/: Cargo.toml
crates/canon-ingest/src/: adapter.rs  artifact_adapter.rs  artifact_registry.rs  lib.rs  normalize.rs  plan_adapter.rs  plan_registry.rs  plan_selftest.rs  plan_writeback.rs  registry.rs  scanner.rs  selftest.rs  task_rows.rs  verdict.rs
crates/canon-ingest/src/adapters/: claude.rs  codex.rs  hermes.rs  mod.rs  omp.rs
crates/canon-ingest/src/artifact_adapters/: divergence.rs  handoff.rs  ledger.rs  mod.rs  native_divergence.rs  openspec_task.rs  review.rs
crates/canon-ingest/src/plan_adapters/: mod.rs  openspec.rs  superpowers.rs
crates/canon-ingest/tests/: claude_ingest_integration.rs  codex_fork_dedup_integration.rs  handoff_fixture.rs  ingest_integration.rs  plan_fixture_dialect_seam.rs  plan_writeback_seam.rs
crates/canon-learn/: Cargo.toml
crates/canon-learn/src/: config.rs  distill.rs  error.rs  guidance.rs  ids.rs  lib.rs  mark_verdict.rs  rebuild.rs  retrieve.rs  reward.rs  role.rs  strategy.rs  trajectory.rs  verdict_outcome.rs  webhook.rs  write.rs
crates/canon-learn/src/promotion/: crn.rs  demote.rs  mod.rs  occurrence.rs  promote.rs
crates/canon-learn/src/store/: mod.rs  parquet_strategy.rs  parquet_trajectory.rs  path.rs
crates/canon-learn/tests/: fixture_round_trip.rs  occurrence_promotion.rs  reward_core.rs
crates/canon-model/: Cargo.toml  JOIN_SPINE.md
crates/canon-model/fixtures/: EXPECTED-violations.json
crates/canon-model/fixtures/malformed/: invalid-scenario-id.json  invalid-state-transition.json  missing-actor.json  unregistered-handoff-domain.json
crates/canon-model/fixtures/well-formed/: change.json  divergence.json  event.json  evidence_record.json  handoff.json  review.json  run.json  session.json  strategy_item.json  subject.json  task.json  trajectory.json
crates/canon-model/schemas/: change.schema.json  divergence.schema.json  event.schema.json  evidence_record.schema.json  family-clear.schema.json  family-divergence.schema.json  family-drill.schema.json  family-feature.schema.json  family-inventory-lock.schema.json  family-inventory.schema.json  family-policy.schema.json  handoff.schema.json  review.schema.json  run.schema.json  scenario.schema.json  session.schema.json  strategy_item.schema.json  subject.schema.json  task.schema.json  trajectory.schema.json
crates/canon-model/src/: envelope.rs  evidence.rs  fixtures.rs  fold.rs  gen.rs  handoff.rs  ids.rs  join_spine_doc.rs  lib.rs  paths.rs  records.rs  schema_export.rs  trust.rs
crates/canon-model/src/family/: divergence.rs  feature.rs  inventory.rs  ledger.rs  mod.rs  policy.rs  refs.rs
crates/canon-plugin/: Cargo.toml
crates/canon-plugin/src/: diagnostic.rs  lib.rs  overlay.rs  project.rs  resolve_plugin_snapshot.rs  selftest.rs
crates/canon-plugin/src/manifest/: grammar.rs  mod.rs  (+5 more)
crates/canon-report/: Cargo.toml
crates/canon-report/fixtures/: corpus.rs
crates/canon-report/src/: check.rs  digest.rs  divergence.rs  error.rs  lib.rs  manifest.rs  marts.rs  query.rs  render.rs  roots.rs  snapshot.rs  tier_boundary.rs
crates/canon-report/tests/: byte_stability.rs  check_gate.rs  fresh_repo.rs  gate_independence.rs  marts.rs  session_costs_multi_workspace.rs  snapshot.rs  snapshot_digit_table_names.rs  tier_boundary.rs
crates/canon-store/: Cargo.toml
crates/canon-store/sql/: views.sql
crates/canon-store/src/: atomic.rs  cursor.rs  fold.rs  git_tier.rs  lib.rs  partition.rs  pg_tier.rs  policy.rs  r2_tier.rs  registry.rs  sqlite_tier.rs  tier.rs
crates/canon-store/tests/: e2e_scope_status_duckdb.rs  e2e_session_run_handoff_join_duckdb.rs  e2e_write_age_query_duckdb.rs  git_tier_all_kinds.rs  git_tier_fixtures.rs  pg_tier_live.rs  r2_tier_live.rs  real_canon_yaml.rs
crates/canon-vocab/: Cargo.toml
crates/canon-vocab/src/: atom.rs  checker.rs  compile.rs  handoff_compile.rs  lib.rs  policy_bridge.rs  resolve_snapshot.rs  selftest.rs  span.rs
crates/canon-vocab/tests/: canon_core_selftest.rs  pilot_consumer_change.rs  proptest_roundtrip.rs
(+390 files in other folders)
