[package]
name = "canon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "canon — single entrypoint binary (harness knowledge substrate)."

[lib]
name = "canon_cli"
path = "src/lib.rs"

[[bin]]
name = "canon"
path = "src/main.rs"

[dependencies]
canon-fmt.workspace = true
canon-gate.workspace = true
canon-ingest.workspace = true
canon-learn.workspace = true
canon-model.workspace = true
canon-policy.workspace = true
canon-plugin.workspace = true
canon-report.workspace = true
canon-store.workspace = true
canon-vocab.workspace = true
chrono = { version = "0.4.45" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1.23.4", features = ["v4"] }
